data/derived/sp14/progs/unify/prog2316.ml.out
Characters 76-77:
  | h:: t -> (h*h) + sqsum t in
                           ^
Error: This expression has type int list
       but an expression was expected of type 'a list list
       Type int is not compatible with type 'a list 
